--- a/MoviesRatings/MoviesRatings/Pages/_Host.cshtml
+++ b/MoviesRatings/MoviesRatings/Pages/_Host.cshtml
@@ -30,7 +30,8 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-
+    @* Import the JsLibrary file*@
+    <script src="~/js/JsLibrary.js"></script>
     <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
