working on UI testing 3/10 passed

--- a/MoviesRatings/MoviesRatings/Pages/ActorPage.razor
+++ b/MoviesRatings/MoviesRatings/Pages/ActorPage.razor
@@ -68,7 +68,7 @@ else
         </select>
         <ValidationMessage id="genderErr" For="() => currentActor.Gender" />
         <br />
-        <input type="submit" value="Submit" />
+        <input id="modelBtnAdd" type="submit" value="Submit" />
         <input type="reset" value="Reset" />
 
     </EditForm>
