All UI tests are passed, ready to push to master

--- a/MoviesRatings/MoviesRatings/Pages/ActorPage.razor
+++ b/MoviesRatings/MoviesRatings/Pages/ActorPage.razor
@@ -77,7 +77,7 @@ else
 @code {
     List<Actor> actors;
     Actor currentActor = new Actor();
-    private ElementReference _element;
+    private ElementReference _element = new ElementReference();
     public bool IsModalOpened { get; set; }
     public bool IsEditMode { get; set; }
     public string SelectedButton { get; set; }
